# Troppical

./: .gitmodules  README.md  main.py
.github/workflows/: build.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  apk_downloader.cpp
android/app/src/main/java/io/github/troppical/: MainActivity.kt
android/app/src/main/java/io/github/troppical/dialogs/: EmulatorAboutDialog.kt
android/app/src/main/java/io/github/troppical/network/: APKDownloader.kt
